<resources>
    <string name="app_name">Stray Paws</string>
    <string name="login">Login</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
</resources>